--- a/GoodOleStLouie/Views/Shared/_Layout.cshtml
+++ b/GoodOleStLouie/Views/Shared/_Layout.cshtml
@@ -35,6 +35,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Location" asp-action="Index">List of Locations</a>
+                            
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Location" asp-action="Create">Add Location</a>
+
+                        </li>
                     </ul>
                 </div>
             </div>
